New link for Discord

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <div class="footer-container">
         <h3 class="footer-container__title">Kontakt</h3>
         <p class="footer-container__text">naczelnakulturka@gmail.com</p>
-        <a target="_blank" href="https://discord.gg/X3e2ySW" class="footer-container__link link">Discord</a>
+        <a target="_blank" href="https://discord.gg/krFjRav" class="footer-container__link link">Discord</a>
         <a target="_blank" href="https://www.mpcforum.pl/profile/1595242-graba4/" class="footer-container__link link">MPCforum</a>
       </div>
 
