Information about the icons in the footer

--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
           <a href="#additionals" class="menu__link link">Informacje</a>
         </li>
       </ul>
+
+      <a href="https://www.twitch.tv/graba4" target="_blank" class="navigation__icon-link">
+        <img class="navigation__icon" src="assets/icons/twitch.svg" alt="Twitch Icon">
+      </a>
+
+      <a href="https://discord.gg/krFjRav" target="_blank" class="navigation__icon-link">
+        <img class="navigation__icon" src="assets/icons/discord.svg" alt="Discord Icon">
+      </a>
     </nav>
 
     <header class="header" id="header">
@@ -133,6 +141,7 @@
         <h3 class="footer-container__title">Ważne linki</h3>
         <a target="_blank" href="https://docs.google.com/forms/d/15x8sRJfEYSRYJUfAHdY-NobkUIZBKjKgO6A66wzhJRw/edit?usp=sharing" class="footer-container__link link">Formularz rejestracyjny</a>
         <a target="_blank" href="https://www.twitch.tv/graba4" class="footer-container__link link">Kanał Twitch</a>
+        <p class="footer-container__text">Icons made by <a class="footer-container__link link" href="https://www.flaticon.com/authors/pixel-perfect">Pixel perfect</a> from <a class="footer-container__link link" href="https://www.flaticon.com/">www.flaticon.com</a></p>
       </div>
       
       <p class="footer__text">Copyright &copy; 2020 Naczelna Kulturka</p>
