New content in information section (about server start)

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
       <h1 class="additionals__title section-title">Dodatkowe informacje</h1>
 
       <ul class="additionals__list list">
-        <li class="list__item"><span class="bold">IP Serwera:</span> naczelnakulturka.pl</li>
+        <li class="list__item"><span class="bold">IP serwera:</span> naczelnakulturka.pl</li>
+        <li class="list__item"><span class="bold">Start serwera:</span> 13.04.2020</li>
         <li class="list__item"><span class="bold">Wersja:</span> 1.15.2</li>
         <li class="list__item"><span class="bold">Tryb:</span> Survival</li>
         <li class="list__item"><span class="bold">White-list:</span> Włączona</li>
